# medit-one

./: .gitignore  README.md  install_cuda.py  pyproject.toml  setup.py
csrc/: flash_attention_kernel.cu  one_kernels.cpp
one/: configuration_one.py  flash_attention.py  linear_moe.py  modeling_one.py  optimized_ops.py  turbo_ops.py
training/: config.py  example.yaml  train.py
