[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medit-one"
version = "1.0.0"
description = "MedIT One - An optimized single-token transformer model with mixture of experts capability"
readme = "README.md"
authors = [
    {name = "MedIT Solutions", email = "contact@meditsolutions.pl"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.32.0",
    "einops>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
]
training = [
    "wandb",
    "pytorch-lightning>=2.0.0",
    "datasets",
]
demo = [
    "gradio>=3.0.0",
]

[tool.setuptools]
packages = ["one"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"