[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medit-one"
version = "1.0.0"
description = "MedIT One - An optimized single-token transformer model with mixture of experts capability"
readme = "README.md"
authors = [
    {name = "MedIT Solutions", email = "contact@meditsolutions.pl"},
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.32.0",
    "einops>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pytest",
]
training = [
    "transformers>=4.32.0",
    "datasets>=2.12.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.40.0",
    "pyyaml>=6.0",
    "tensorboard>=2.12.0",
    "wandb>=0.15.0",
    "scikit-learn>=1.3.0",
    "evaluate>=0.4.0",
    "tqdm>=4.65.0",
    "einops>=0.6.0",
    "safetensors>=0.3.1",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "dacite>=1.8.0",  # For configuration management
]
demo = [
    "gradio>=3.0.0",
]

# Add a combined extras option for convenience
full = [
    "medit-one[dev,training,demo,cuda]",
]

[tool.setuptools]
packages = ["one"]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "one.__version__"}

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"